--- a/index.htm
+++ b/index.htm
@@ -6,7 +6,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            text-align: center;
+            
             margin-top: 50px;
         }
         a.bookmarklet {
@@ -25,8 +25,9 @@
 </head>
 <body>
     <h1>Install the Bookmarklet to export a ChatGPT Chat</h1>
-    
+    <div style="text-align:center;">
     <a href="#" id="target">Install Link</a>
+    </div>
     <br />
     <br />
         <h1>How to Install a Bookmarklet</h1>
