--- a/index.htm
+++ b/index.htm
@@ -25,9 +25,9 @@
 </head>
 <body>
     <h1>Install the Bookmarklet to export a ChatGPT Chat</h1>
-    <div style="text-align:center;">
-    <a href="#" id="target">Install Link</a>
-    </div>
+
+   <strong> <a href="#" id="target">Install Link</a></strong>
+
     <br />
     <br />
         <h1>How to Install a Bookmarklet</h1>
@@ -101,11 +101,6 @@
         </ol>
     </div>
 
-    <h2>Example Bookmarklet</h2>
-    <p>Here's an example of a bookmarklet link:</p>
-    <pre>&lt;a href="javascript:(function(){alert('Hello, World!');})();"&gt;My Bookmarklet&lt;/a&gt;</pre>
-
-    <p>Right-click the link, copy the URL, and follow the instructions above to install it as a bookmarklet.</p>
 
     
 </body>
