--- a/index.htm
+++ b/index.htm
@@ -1,107 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Bookmarklet Installer</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            
-            margin-top: 50px;
-        }
-        a.bookmarklet {
-            display: inline-block;
-            padding: 10px 20px;
-            background-color: #007bff;
-            color: #fff;
-            text-decoration: none;
-            border-radius: 5px;
-        }
-        a.bookmarklet:hover {
-            background-color: #0056b3;
-        }
-    </style>
-   
-</head>
-<body>
-    <h1>Install the Bookmarklet to export a ChatGPT Chat</h1>
-
-   <strong> <a href="#" id="target">Install Link</a></strong>
-
-    <br />
-    <br />
-        <h1>How to Install a Bookmarklet</h1>
-    <p>Follow these steps to install a bookmarklet from an <code>&lt;a&gt;</code> element with JavaScript code in the <code>href</code> attribute.</p>
-
-    <h2>General Steps</h2>
-    <ol>
-        <li>Right-click the bookmarklet link and select <strong>"Copy Link Address"</strong> or copy the <code>javascript:</code> code manually.</li>
-        <li>Create or edit a bookmark in your browser and paste the copied code into the URL field.</li>
-        <li>Save the bookmark. It will now work as a bookmarklet when clicked.</li>
-    </ol>
-
-    <div class="browser-section">
-        <h2>Desktop Browsers</h2>
-        <h3>Google Chrome</h3>
-        <ol>
-            <li>Right-click the bookmarks bar (use <kbd>Ctrl+Shift+B</kbd> to show it if hidden).</li>
-            <li>Select <strong>"Add Page"</strong>, give it a name, and paste the <code>javascript:</code> code into the URL field.</li>
-            <li>Click <strong>Save</strong>.</li>
-        </ol>
-
-        <h3>Mozilla Firefox</h3>
-        <ol>
-            <li>Right-click on the bookmarks bar and select <strong>"New Bookmark"</strong>.</li>
-            <li>Give it a name and paste the <code>javascript:</code> code into the Location field.</li>
-            <li>Click <strong>Add</strong>.</li>
-        </ol>
-
-        <h3>Microsoft Edge</h3>
-        <ol>
-            <li>Right-click on the bookmarks bar (show it using <kbd>Ctrl+Shift+B</kbd>).</li>
-            <li>Select <strong>"Add a Favorite"</strong>, enter a name, and paste the <code>javascript:</code> code into the URL field.</li>
-            <li>Click <strong>Save</strong>.</li>
-        </ol>
-
-        <h3>Safari (Mac)</h3>
-        <ol>
-            <li>Show the bookmarks bar via <strong>View &gt; Show Favorites Bar</strong>.</li>
-            <li>Drag the <code>&lt;a&gt;</code> link directly to the bar, or manually copy the <code>javascript:</code> code and add it to a new bookmark.</li>
-        </ol>
-    </div>
-
-    <div class="browser-section">
-        <h2>Mobile Browsers</h2>
-        <h3>Chrome (Android/iOS)</h3>
-        <ol>
-            <li>Bookmark any page.</li>
-            <li>Edit the bookmark and replace the URL with the <code>javascript:</code> code.</li>
-            <li>Save the changes.</li>
-        </ol>
-
-        <h3>Safari (iOS)</h3>
-        <ol>
-            <li>Bookmark any page (e.g., <code>https://example.com</code>).</li>
-            <li>Edit the bookmark and replace the URL with the <code>javascript:</code> code.</li>
-            <li>Save the changes.</li>
-        </ol>
-
-        <h3>Samsung Internet (Android)</h3>
-        <ol>
-            <li>Bookmark any page.</li>
-            <li>Edit the bookmark and replace the URL with the <code>javascript:</code> code.</li>
-            <li>Save the changes.</li>
-        </ol>
-
-        <h3>Firefox (Android/iOS)</h3>
-        <ol>
-            <li>Bookmark any page.</li>
-            <li>Edit the bookmark and replace the URL with the <code>javascript:</code> code.</li>
-            <li>Save the changes.</li>
-        </ol>
-    </div>
-
-
+<html>
+  <head>
     
-</body>
+  </head>
+  <body>
+    <a id="target" href="#">Install Bookmarklet (drag and drop this link to fav bar)</a>
 </html>
