--- a/index.htm
+++ b/index.htm
@@ -20,6 +20,7 @@
         #target:hover {
             background-color: #0056b3;
         }
+      .explain{font-size: small;}
     </style>
     
   </head>
@@ -30,73 +31,71 @@
 
         <br />
     <br />
-        <h1>How to Install a Bookmarklet</h1>
-    <p>Follow these steps to install a bookmarklet from an <code>&lt;a&gt;</code> element with JavaScript code in the <code>href</code> attribute.</p>
+        <div class="explain">
 
-    <h2>General Steps</h2>
+
+          
+    <h2>How to Install a Bookmarklet</h2>
+    <p>If you want to install the bookmarklet from this page, follow the steps below for your device and browser:</p>
+
+    <h3>On Desktop</h3>
+    <h4>Google Chrome</h4>
     <ol>
-        <li>Right-click the bookmarklet link and select <strong>"Copy Link Address"</strong> or copy the <code>javascript:</code> code manually.</li>
-        <li>Create or edit a bookmark in your browser and paste the copied code into the URL field.</li>
-        <li>Save the bookmark. It will now work as a bookmarklet when clicked.</li>
+        <li>Make sure the bookmarks bar is visible. Go to <strong>Menu (⋮)</strong> → <strong>Bookmarks</strong> → <strong>Show Bookmarks Bar</strong>.</li>
+        <li>Click and drag the bookmarklet link to the bookmarks bar.</li>
+        <li>Done! You can now click the bookmarklet to use it.</li>
     </ol>
 
-    <div class="browser-section">
-        <h2>Desktop Browsers</h2>
-        <h3>Google Chrome</h3>
-        <ol>
-            <li>Right-click the bookmarks bar (use <kbd>Ctrl+Shift+B</kbd> to show it if hidden).</li>
-            <li>Select <strong>"Add Page"</strong>, give it a name, and paste the <code>javascript:</code> code into the URL field.</li>
-            <li>Click <strong>Save</strong>.</li>
-        </ol>
+    <h4>Mozilla Firefox</h4>
+    <ol>
+        <li>Ensure the bookmarks toolbar is visible. Go to <strong>Menu (≡)</strong> → <strong>Bookmarks</strong> → <strong>Bookmarks Toolbar</strong> → <strong>Always Show</strong>.</li>
+        <li>Click and drag the bookmarklet link to the bookmarks toolbar.</li>
+        <li>Done! You can now click the bookmarklet to use it.</li>
+    </ol>
 
-        <h3>Mozilla Firefox</h3>
-        <ol>
-            <li>Right-click on the bookmarks bar and select <strong>"New Bookmark"</strong>.</li>
-            <li>Give it a name and paste the <code>javascript:</code> code into the Location field.</li>
-            <li>Click <strong>Add</strong>.</li>
-        </ol>
+    <h4>Microsoft Edge</h4>
+    <ol>
+        <li>Make sure the favorites bar is visible. Go to <strong>Menu (⋯)</strong> → <strong>Settings</strong> → <strong>Appearance</strong> → <strong>Show Favorites Bar</strong>.</li>
+        <li>Click and drag the bookmarklet link to the favorites bar.</li>
+        <li>Done! You can now click the bookmarklet to use it.</li>
+    </ol>
 
-        <h3>Microsoft Edge</h3>
-        <ol>
-            <li>Right-click on the bookmarks bar (show it using <kbd>Ctrl+Shift+B</kbd>).</li>
-            <li>Select <strong>"Add a Favorite"</strong>, enter a name, and paste the <code>javascript:</code> code into the URL field.</li>
-            <li>Click <strong>Save</strong>.</li>
-        </ol>
+    <h4>Safari (macOS)</h4>
+    <ol>
+        <li>Enable the favorites bar by going to <strong>View</strong> → <strong>Show Favorites Bar</strong>.</li>
+        <li>Click and drag the bookmarklet link to the favorites bar.</li>
+        <li>Done! You can now click the bookmarklet to use it.</li>
+    </ol>
 
-        <h3>Safari (Mac)</h3>
-        <ol>
-            <li>Show the bookmarks bar via <strong>View &gt; Show Favorites Bar</strong>.</li>
-            <li>Drag the <code>&lt;a&gt;</code> link directly to the bar, or manually copy the <code>javascript:</code> code and add it to a new bookmark.</li>
-        </ol>
-    </div>
+    <h3>On Mobile</h3>
+    <h4>Google Chrome (Android/iOS)</h4>
+    <ol>
+        <li>Long-press the bookmarklet link and choose <strong>Copy Link Address</strong>.</li>
+        <li>Bookmark any webpage by tapping <strong>Menu (⋮)</strong> → <strong>Bookmark</strong>.</li>
+        <li>Go to <strong>Menu (⋮)</strong> → <strong>Bookmarks</strong>, find the newly created bookmark, and tap the <strong>Edit</strong> button (pencil icon).</li>
+        <li>Replace the URL with the copied bookmarklet code and save.</li>
+        <li>Done! You can now tap the bookmarklet to use it.</li>
+    </ol>
 
-    <div class="browser-section">
-        <h2>Mobile Browsers</h2>
-        <h3>Chrome (Android/iOS)</h3>
-        <ol>
-            <li>Bookmark any page.</li>
-            <li>Edit the bookmark and replace the URL with the <code>javascript:</code> code.</li>
-            <li>Save the changes.</li>
-        </ol>
+    <h4>Safari (iOS)</h4>
+    <ol>
+        <li>Long-press the bookmarklet link and choose <strong>Copy</strong>.</li>
+        <li>Bookmark any webpage by tapping the <strong>Share</strong> icon (square with arrow) → <strong>Add Bookmark</strong>.</li>
+        <li>Go to <strong>Bookmarks</strong>, tap <strong>Edit</strong>, and select the bookmark you just created.</li>
+        <li>Replace the URL with the copied bookmarklet code and save.</li>
+        <li>Done! You can now tap the bookmarklet to use it.</li>
+    </ol>
 
-        <h3>Safari (iOS)</h3>
-        <ol>
-            <li>Bookmark any page (e.g., <code>https://example.com</code>).</li>
-            <li>Edit the bookmark and replace the URL with the <code>javascript:</code> code.</li>
-            <li>Save the changes.</li>
-        </ol>
+    <h4>Mozilla Firefox (Android/iOS)</h4>
+    <ol>
+        <li>Long-press the bookmarklet link and choose <strong>Copy Link</strong>.</li>
+        <li>Bookmark any webpage by tapping <strong>Menu (≡)</strong> → <strong>Add to Bookmarks</strong>.</li>
+        <li>Go to <strong>Menu (≡)</strong> → <strong>Bookmarks</strong>, find the newly created bookmark, and tap <strong>Edit</strong>.</li>
+        <li>Replace the URL with the copied bookmarklet code and save.</li>
+        <li>Done! You can now tap the bookmarklet to use it.</li>
+    </ol>
 
-        <h3>Samsung Internet (Android)</h3>
-        <ol>
-            <li>Bookmark any page.</li>
-            <li>Edit the bookmark and replace the URL with the <code>javascript:</code> code.</li>
-            <li>Save the changes.</li>
-        </ol>
+    <p><strong>Note:</strong> Always start by opening a webpage before using a bookmarklet, as they often work on the currently loaded page.</p>
 
-        <h3>Firefox (Android/iOS)</h3>
-        <ol>
-            <li>Bookmark any page.</li>
-            <li>Edit the bookmark and replace the URL with the <code>javascript:</code> code.</li>
-            <li>Save the changes.</li>
-        </ol>
+        </div>
 </html>
