--- a/index.htm
+++ b/index.htm
@@ -31,6 +31,10 @@
 
         <br />
     <br />
+
+    
+<details>
+  <summary>How to install a bookmarklet</summary>
         <div class="explain">
 
 
@@ -98,4 +102,5 @@
     <p><strong>Note:</strong> Always start by opening a webpage before using a bookmarklet, as they often work on the currently loaded page.</p>
 
         </div>
+</details>
 </html>
