add exporter image

--- a/index.htm
+++ b/index.htm
@@ -26,6 +26,7 @@
   </head>
   <body>
     <header>
+        <img src="exporter.webp" />
      <h1>Install Chat Pager - the Bookmarklet to export a ChatGPT Chat</h1>
     </header>
     <main>
