--- a/index.htm
+++ b/index.htm
@@ -26,8 +26,12 @@
   </head>
   <body>
     <header>
-        <img src="exporter.webp" />
-     <h1>Install Chat Pager - the Bookmarklet to export a ChatGPT Chat</h1>
+        <div class="grid">
+            <div>  <img src="exporter.webp" style="max-width: 200px; text-align: center;" /></div>
+            <div> <h1>Install Chat Pager - the Bookmarklet to export a ChatGPT Chat</h1></div>
+          </div>
+      
+    
     </header>
     <main>
      <p>This bookmarklet exports a whole current chat from ChatGPT (not only the last answer) including your prompts in html contents. When you run the bookmarklet. the html contents is stored in the clipboard. You then cen save it or send it or paste it where you want. It is a full html file - not only a snippet.</p>
